--- a/Web/019/index.html
+++ b/Web/019/index.html
@@ -2,9 +2,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>小孙同学</title>
+    <title>生日快乐</title>
     <meta name="language" content="zh-CN">
-    <meta name="title" content="小孙同学">
+    <meta name="title" content="生日快乐">
     <meta name="github" content="https://github.com/sun0225SUN/Awesome-Love-Code">
     <meta name="describe" content="收集不易，您的star是我坚持的动力，同时也欢迎各位PR哦! ">
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210715233345.png">
@@ -15,11 +15,9 @@
     <div id="hovertreecontainer">
 
         <div>
-            <h1 id="h1">小孙同学</h1>
+            <h1 id="h1">龚励同学</h1>
             <br>
-            <h2 id="h2">愿与你长相厮守</h2>
-            <br>
-            <h3 id="h2">真诚之中，与你相识相知，灵犀之间，与你朝夕相伴。</h3>
+            <h2 id="h2">祝你生日快乐</h2>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
@@ -33,7 +31,6 @@
     <canvas id="canvas"></canvas>
     <audio autoplay="autoplay">
         <source src="index_1.html" type="audio/mpeg">
-        您的浏览器不支持播放音乐。请用支持html5的浏览器打开,例如chrome或火狐或者新版IE等。
 
     </audio>
     <script type="text/javascript" src="js/hovertreewelcome.js">
